# py-pdf_comment_tools

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
.github/workflows/: tests.yml
legacy/: README.md
legacy/py-extract_PDF_highlights-main/: README.md  main.py
legacy/py-extract_pdf_comments_content-main/: README.md  main.py
notebooks/: py_pdf_comment_tools_colab.ipynb
py-extract_pdf_comments_content-main/: .gitignore
src/pdf_comment_tools/: __init__.py  __main__.py  cli.py  constants.py  csv_utils.py  extraction.py  highlighting.py  pdf_utils.py
tests/: conftest.py  test_main.py
tests/fixtures/: test_keywords.csv
